# universal-mcp-ui

./: .gitignore  README.md  pyproject.toml  setup.py  streamlit_app.py
src/mcpcli/: __main__.py  chat_handler.py  llm_client.py
src/mcpcli/messages/: send_message.py
